# opusic-sys

./: .appveyor.yml  .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs  opus.patch
.github/workflows/: rust.yml
opus/: CMakeLists.txt
prebuilt/msvc/x64/: libopus.pdb.srcsrv  opus.exp  opus.lib
prebuilt/msvc/x86/: libopus.lib  opus.exp
src/: lib.rs
tests/: version.rs
