[package]
name = "opusic-sys"
version = "0.5.3"
authors = ["Douman <douman@gmx.se>"]
description = "Bindings to libopus"
keywords = ["opus"]
readme = "README.md"
repository = "https://github.com/DoumanAsh/opusic-sys"
license = "BSL-1.0"
edition = "2018"

[dependencies.libc]
version = "0.2"
default-features = false

[build-dependencies]
cmake = "0.1"

[build-dependencies.bindgen]
version = "0.69"
optional = true

[features]
# Used internally to generate lib.rs
build-bindgen = ["bindgen"]
# Enables DRED feature
dred = []
